Odev-1 Bootstrap added

--- a/Hafta-4/Ödev 1 - Bootstrap/styles.css
+++ b/Hafta-4/Ödev 1 - Bootstrap/styles.css
@@ -6,34 +6,16 @@ body {
     padding: 0;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
-    text-align: center;
-}
-
 header h1 {
     margin: 0;
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 10px;
-}
-
-nav ul li a {
+.navbar-dark .navbar-nav .nav-link {
     color: #fff;
-    text-decoration: none;
 }
 
-nav ul li a:hover {
-    text-decoration: underline;
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: #ddd;
 }
 
 .main {
@@ -45,35 +27,12 @@ nav ul li a:hover {
     text-align: center;
 }
 
-.posts-container {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-}
-
-article {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    padding: 20px;
-    flex: 1;
-    max-width: 45%;
-    text-align: center;
-}
-
-article img {
-    max-width: 100%;
-    border-radius: 8px;
-}
-
-article h3 a {
+.card-body .card-title a {
     color: #333;
     text-decoration: none;
 }
 
-article h3 a:hover {
+.card-body .card-title a:hover {
     text-decoration: underline;
 }
 
